# screeps-starter-rust

./: .example-screeps.yaml  .gitignore  Cargo.toml  README.md  example-screeps.toml  package.json
javascript/: main.js
js_src/: main.js
js_tools/: deploy.js
src/: lib.rs  logging.rs  main.rs  types.rs
