[package]
name = "screeps-starter-rust"
version = "0.0.0"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
log = "0.4"
fern = "0.6"
# bindgen compatibility still in branch! TODO remove before merge
#screeps-game-api = { path = "../screeps-game-api" }
screeps-game-api = { git = "https://github.com/rustyscreeps/screeps-game-api.git", branch = "bindgen" }
#screeps-game-api = "0.10"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]

[features]
default = ["console_error_panic_hook"]
