[package]
name = "screeps-starter-rust"
version = "0.0.0"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
log = "0.4"
fern = "0.6"
screeps-game-api = "0.10"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
# Replace the following with `wasm-opt = ["-O4", "-g"]` (or with whatever flag
# combo you'd like) to enable wasm-opt optimization, which wasm-pack will try to install
# automatically, but must be installed separately on some operating systems
# Removing the `"-g"` will further decrease the size of the binary at but removes function names,
# making stack traces upon panic less useful
wasm-opt = false

[features]
default = []
